# autogo

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile.worker  LICENSE  README.md  cluster.toml  pyproject.toml
.claude/commands/: autoresearch.md  experiment.md
.devcontainer/: Dockerfile  devcontainer.json
experiments/2026-04-25_14-16-mcts-throughput-bench/: README.md  analyze.py  benchmark.py  driver.py  job_priorities.txt  launcher.sh  report.md  run_all_modes.sh
experiments/2026-04-26_22-32-train-fromscratch/: README.md  analyze.py  collect_driver.py  run_games.py  run_iteration.sh  train.py  update_league.py
experiments/2026-04-28_00-38-fastlearn/: README.md  analyze.py  collect_driver.py  dataset-phaseB-baseline.txt  dataset-phaseB-cleandata.txt  dataset-phaseB-onlynew.txt  job_priorities-eval-extra.txt  launch_eval_extra.py  plot_comparison.py  plot_progress.py  pre_collect_random.py  report.md  results-phaseA.tsv  results.tsv  run_eval_games.py  run_games.py  run_iteration.sh  run_phaseB.sh  train.py  update_league.py
infra/: __init__.py  cluster.py  gpu_lease.py  install_container_worker.sh  remote_exec.py
scripts/: build_cpp.sh
src/alpha_go/: __init__.py  __main__.py  dataset.py  engine.py  gameplay.py  go.py  mcts.py  model.py  play.py  self_play.py
src/alpha_go/agents/: __init__.py  autogo.py  base.py  claude_agent.py  nn_agent.py  nn_mcts.py  random.py
src/alpha_go/analysis/: __init__.py  plotting.py
src/alpha_go/cpp/: CMakeLists.txt
src/alpha_go/cpp/bindings/: bindings.cpp
src/alpha_go/cpp/go/: go_game.cpp  go_game.h  go_game_test.cpp
src/alpha_go/cpp/mcts/: mcts.cpp  mcts.h  mcts_test.cpp
src/alpha_go/inference/: __init__.py  batched_engine.py
src/alpha_go/proto/: __init__.py  inference.proto  inference_pb2.py  inference_pb2_grpc.py
tests/: __init__.py  test_cpp_go.py  test_cpp_mcts.py  test_cpp_mcts_batched.py  test_go.py  test_gpu_lease.py  test_mcts.py  test_mcts_data.py  test_model.py
